styles.css
* {
    margin:  0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Google Sans", sans-serif;
}

i {
    color: rgb(3, 42, 3);
}

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.booking,
.about,
.events,
.dining {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-grow: 1;
}

.events .cardTitle,
.booking .cardTitle,
.about .cardTitle,
.dining .cardTitle {
    text-align: center;
    margin-top: 40px;

}

/* Navigation Styles */

nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 70px;
    padding: 50px 20px;
    background-color: white;
    position: sticky;
    top: 0;
}

.btn {
    text-decoration: none;
    background-color:rgb(3, 42, 3);
    color: white;
}

nav .leftSide h2 a {
    color: rgb(3, 42, 3);
    text-decoration: none;
    text-align: center;
    font-size: 2rem;
}

nav .leftSide h2 a span {
    display: block;
    font-size: 1.4rem;
}

nav .middleSection ul {
    display: flex;
    flex-direction: row;
    gap: 40px;
}

nav .middleSection ul li {
    list-style: none;
}

nav .middleSection ul li a {
    text-decoration: none;
    color:rgb(3, 42, 3);
    font-weight: 600;
    font-size: 1.2rem;
    padding-bottom: 8px;
    border-bottom: 3px solid white;
}

nav .middleSection ul li a:hover {
    border-bottom: 3px solid rgb(3, 42, 3);
}

nav .rightSide .btn {
    font-weight: 500;
    font-size: 1.2rem;
    padding: 12px 20px;
}

/* Main Styles */

main {
    display: flex;
    flex-direction: column;
}

.hero {
    background: linear-gradient(rgba(0, 0, 0, 0.478), rgba(0, 0, 0, 0.478)), url(https://images.pexels.com/photos/30391786/pexels-photo-30391786.jpeg?_gl=1*t7lim*_ga*OTEyMDA2NjMwLjE3NzIxMjg4MzA.*_ga_8JE65Q40S6*czE3NzI3Mjc2OTUkbzckZzEkdDE3NzI3MjgwNjYkajEkbDAkaDA.);
    background-size: cover;
    width: 100%;
    height: 600px;
    display: flex;
    justify-content: center;
    align-items: end;
}

.hero h1 {
    color: white;
    font-size: 4rem;
    margin-bottom: 40px;
}

main section {
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 40px;
    height: 450px;
    overflow: hidden;
    padding: 30px 60px;
}

main .diningIntro {
    background-color: rgb(143, 179, 143);
}

main .col50 {
    width: 50%;
}

main .col50 .textContainer {
    display: flex;
}

.cardTitle {
    color: rgb(3, 42, 3);
    margin: 15px 0px;
    font-size: 2.5rem;
}

main p {
    font-size: 18px;
    margin-bottom: 25px;
}

main .col50 .imgContainer {
    height: 90%;
}

main .imgContainer img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

/* Button Styles */

.button {
    padding: 10px 20px;
    background-color: transparent;
    color: rgb(3, 42, 3);
    border: 3px solid rgb(3, 42, 3);
    font-size: 1.3rem;
    font-weight: 600;
    text-decoration: none;
    display: block;
    width: 145px;
    text-align: center;
}

.button:hover {
    background-color: rgb(3, 42, 3);
    color: white;
    box-shadow: 4px 6px 0px black;
}

/* Contact Section Style */

.contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
}

/* Book an Event Styles */

.booking h3 {
    font-size: 1.5rem;
}

.booking p {
    font-size: 1rem;
    margin: 40px 0 10px 0;
}

.booking .btnArea input {
    margin: 40px;
    padding: 10px 20px;
    font-size: 1rem;
    background-color:rgb(3, 42, 3);
    color: white;
    font-weight: 600;
    border: none;
    cursor: pointer;
}

/* Forms Styles */

.contact form {
    border: 1px solid rgb(3, 42, 3);
    padding: 25px;
    margin: 25px;
    text-align: center;
}

.contact .inputBox {
    width: 300px;
    height: 40px;
    margin: 15px;
}

.contact .textArea {
    height: 80px;
}

.booking form {
    margin: 40px 60px;
    text-align: center;
}

.booking .inputBox {
    width: 500px;
    height: 40px;
    margin: 15px;
}

.booking .textArea {
    height: 90px;
}

.inputBox input,
.inputBox textarea {
    width: 100%;
    height: 100%;
    resize: none;
    padding: 10px;
}

.btnArea input {
    padding: 10px 20px;
    font-size: 1rem;
    background-color:rgb(3, 42, 3);
    color: white;
    font-weight: 600;
    border: none;
    cursor: pointer;
}

/* About Styles */

.about {
    width: 100%;
    height: 100%;
}

.about .partOne,
.about .partTwo,
.about .partThree {
    text-align: left;
    flex-direction: column;
    height: 100%;
    width: 70%;
}

.about .partOne h3,
.about .partTwo h3,
.about .partThree h3 {
    font-size: 1.7rem;
    color: rgb(3, 42, 3);
}

.about .partTwo .imgContainer {
    margin: 20px 15px;
}

.about .partTwo .imgContainer img {
    height: 550px;
}

.about .partOne .textContainer,
.about .partTwo .textContainer,
.about .partThree .textContainer {
    margin: 60px 15px;

}

.col2Container {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.sidebar {
    display: flex;
    flex-direction: column;
    padding: 15px;
    text-align: left;
    font-size: 14px;
    width: 150px;
    background-color: rgb(143, 179, 143);
}

.sidebar a {
    text-decoration: none;
    color: black;
    margin: 20px 0;
}

.sidebar h3 {
    margin-top: 15px;
    font-size: 20px;
}

/* Events Styles */

main .tableContainer {
    justify-content: center;
    align-items: center;
}

table {
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    width: 100%;
    height: 240px;
    align-items: center;
    justify-content: center;
}

table .row {
    width: 100%;
    height: 100%;
}

table .row .cell {
    padding: 7px;
    padding-right: 50px;
    text-align: left;

}

table .row th {
    font-size: 1.3rem;
}

table .row td {
    font-size: 1rem;
}

table .paragraph .cell {
    font-size: 0.8rem;
    padding-right: 20px;
}

/* Footer Styles */

footer {
    width: 100%;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(3, 42, 3);
    color: white;
}

